--- a/src/style/pages/_home.scss
+++ b/src/style/pages/_home.scss
@@ -1,12 +1,37 @@
 .home 						{ background:#00ae82; color:white;
-	main 					{ display:flex; align-items:center; justify-content:center; flex-direction:column }
-	figure 					{ margin-bottom:70px; padding:1.5em }
-	ul 						{ width:100%; 
+	main 					{ display:flex; align-items:center; justify-content:center; flex-direction:column; padding: 1.5rem 0; }
+	figure 					{  }
+	ul 						{ width:100%; padding-top: calc(100vh - 90vh );
 		li 					{ border-bottom:1px solid rgba(0,0,0,.1); 
 			&:first-child 	{ border-top:1px solid rgba(0,0,0,.1);}
 			h3 				{ font-size:2.3em; padding-bottom:3px }
 			p 				{ font-size:1.2em;}
-			a 				{ color:white; display:block; padding:1.3em 0}
+			a 				{ color:white; display:block;  @include flex_yc(); padding:1.3em 0}
+			> div 			{ padding:0 2rem; max-width:600px; margin:0 auto;  }
+
+			i    			{ font-size: 50px;width: 1em;height: 1em;border-radius: 1em; margin-right:24px; border:4px solid rgba(0,0,0,.1); overflow:hidden;
+				s 			{display:block; width:100%; height:100%; background-size: cover; backgound-repeat:no-repeat; background-position:center center }
+				&.ar s 		{ background-image:url('img/ar.png')  }
+				&.en s		{ background-image:url('img/en.png')  }
+				&.tr s		{ background-image:url('img/tr.png') }
+			}
 		}
 	}
 }
+
+@media #{$gl-xs} {
+	
+	.home 						{ 
+		main 					{  padding: .8rem 0; }
+		ul 						{ 
+			li 					{ 
+				
+				h3 				{ font-size:1.8em; padding-bottom:0  }
+				p 				{ font-size:1.1em;}
+				a 				{ padding:1.2em 0}
+				i 				{ margin-right:16px; top:2px }
+				
+			}
+		}
+	}
+}  	
