--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -261,6 +261,7 @@ blockquote.record 				{ display: flex;align-items: center;padding:20px 10px 20px
 @ pages  */
 
  @import "pages/home";
+ @import "pages/view";
 
  // @import "pages/about";
  // @import "pages/product";
